--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "primeflex": "^3.3.0",
+    "moment": "^2.29.4",
+    "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.28.0",
     "vue": "^3.2.47",
